--- a/urls.bib
+++ b/urls.bib
@@ -1,14 +1,21 @@
 @Misc{DLW,
-    note = {Webseite der Buchreihe -- Die Legende der Wächter. [Stand: 28.03.2015]},
+    note = {Webseite der Buchreihe ,,Die Legende der Wächter''. [Stand: 28.03.2015]},
     howpublished = "\url{http://die-legende-der-waechter.wikia.com/wiki/Gylfie}",
     key = {DLW}
 }
 
 @Misc{GIG,
-    note = {GNOME Human Interface Guidelines [Stand: 29.03.2015]},
+    note = {GNOME Human Interface Guidelines. [Stand: 29.03.2015]},
     howpublished = "\url{https://developer.gnome.org/hig/stable/}",
     key = {GIG}
 }
+
+@Misc{GTK,
+    note = {Dokumentation GTK. [Stand: 20.04.2015]},
+    howpublished = "\url{http://www.gtk.org/documentation.php}",
+    key = {GTK}
+}
+
 
 @Misc{GS,
     note = {Enzyklopädie für Mathematik. Eine mathematische Herleitung des
@@ -19,7 +26,7 @@
 
 
 @Misc{FU,
-    note = {RSS und Atom. [Stand: 30.03.2015]},
+    note = {Übersicht Feedformate. [Stand: 30.03.2015]},
     howpublished = "\url{http://www.data2type.de/xml-xslt-xslfo/newsfeeds-rss-atom/was-sind-newsfeeds/versionen-von-rss-und-atom/}",
     key = {FU}
 }
@@ -32,8 +39,8 @@
 
 
 @Misc{2.0SPEC,
-    note = {Spezifikation von RSS 2.0. [Stand: 31.03.2015]},
-    howpublished = "\url{http://web.resource.org/rss/1.0/}",
+    note = {Spezifikation RSS 2.0. [Stand: 31.03.2015]},
+    howpublished = "\url{http://cyber.law.harvard.edu/rss/rss.html}",
     key = {2.0SPEC}
 }
 
@@ -70,7 +77,7 @@
 }
 
 @Misc{Vienna,
-    note = {Webseite Feedreaders Vienna. [Stand: 19.04.2015]},
+    note = {Webseite Feedreader Vienna. [Stand: 19.04.2015]},
     howpublished = "\url{http://www.vienna-rss.org/}",
     key = {Vienna}
 }
@@ -82,55 +89,62 @@
 }
 
 @misc{FPD,
-    note = {Dokumentation Universal Feedparser [Stand: 10.04.2015]},
-    howpublished = "\url{http://wirtschaftslexikon.gabler.de/Archiv/75634/wissen-v4.html}",
+    note = {Dokumentation Universal Feedparser. [Stand: 10.04.2015]},
+    howpublished = "\url{https://pythonhosted.org/feedparser/}",
     key = {FPD}
 }
 
 
 @misc{WebKit,
-    note = {Webseite von WebKitGtk+ [Stand: 12.04.2015]},
+    note = {Webseite von WebKitGtk+. [Stand: 12.04.2015]},
     howpublished = "\url{http://webkitgtk.org}",
     key = {WebKit}
 }
 
 @misc{bpython,
-    note = {Webseite von bpython [Stand: 13.04.2015]},
+    note = {Webseite von bpython. [Stand: 13.04.2015]},
     howpublished = "\url{http://www.bpython-interpreter.org}",
     key = {bpyhton}
 }
 
 @misc{PEP,
-    note = {Webseite der Python PEP8-Stilrichtlinien [Stand: 13.04.2015]},
+    note = {Python PEP8-Stilrichtlinien. [Stand: 13.04.2015]},
     howpublished = "\url{https://www.python.org/dev/peps/pep-0008/}",
     key = {PEP}
 }
 
 @misc{github,
-    note = {Webseite von github [Stand: 13.04.2015]},
+    note = {Webseite von github. [Stand: 13.04.2015]},
     howpublished = "\url{http://github.com}",
     key = {github}
 }
 
 
 @Misc{libsoup,
-    note = {Projektseite von libsoup [Stand: 17.04.2015]},
+    note = {Projektseite von libsoup. [Stand: 17.04.2015]},
     howpublished = "\url{https://wiki.gnome.org/action/show/Projects/libsoup?action=show&redirect=LibSoup}",
     key = {libsoup}
 }
 
 
 @Misc{i3,
-    note = {Webseite des Tiling-Window-Managers i3. [Stand: 17.04.2015]},
+    note = {Tiling-Window-Manager i3. [Stand: 17.04.2015]},
     howpublished = "\url{http://i3wm.org/screenshots/}",
     key = {i3}
 }
 
 
 @Misc{libnotify,
-    note = {GNOME Developer API zu der Bibliothek libnotify. [Stand: 17.04.2015]},
-    howpublished = "\url{https://developer.gnome.org/libnotify/0.7/NotifyNotification.html}",
-    key = {libnotify}
+note = {GNOME Developer API zu der Bibliothek libnotify. [Stand: 17.04.2015]},
+howpublished = "\url{https://developer.gnome.org/libnotify/0.7/NotifyNotification.html}",
+key = {libnotify}
+}
+
+
+@Misc{knuth,
+note = {Literale Programmierung. [Stand: 17.04.2015]},
+howpublished = "\url{http://www-cs-faculty.stanford.edu/~uno/lp.html}",
+key = {knuth}
 }
 
 
