chapter II and III modified

--- a/urls.bib
+++ b/urls.bib
@@ -147,4 +147,15 @@ howpublished = "\url{http://www-cs-faculty.stanford.edu/~uno/lp.html}",
 key = {knuth}
 }
 
+@Misc{gimp,
+note = {Webseite von GIMP. [Stand: 28.05.2015]},
+howpublished = "\url{http://www.gimp.org/}",
+key = {gimp}
+}
+
+@Misc{lgpl,
+note = {Referenz zu LGBL. [Stand: 28.05.2015]},
+howpublished = "\url{http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html}",
+key = {lgpl}
+}
 
