chapter III modified

--- a/urls.bib
+++ b/urls.bib
@@ -159,3 +159,23 @@ howpublished = "\url{http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html}",
 key = {lgpl}
 }
 
+
+@Misc{language,
+note = {Language Bindings für GTK+. [Stand: 29.05.2015]},
+howpublished = "\url{http://www.gtk.org/language-bindings.php}",
+key = {language}
+}
+
+
+@Misc{widgets,
+note = {Gallerie der Widgets in GTK+. [Stand: 30.05.2015]},
+howpublished = "\url{https://developer.gnome.org/gtk3/stable/ch03.html}",
+key = {widgets}
+}
+
+
+@Misc{widgetsall,
+note = {Hierarchie von Widgets in GTK+. [Stand: 30.05.2015]},
+howpublished = "\url{https://developer.gnome.org/gtk3/stable/ch02.html}",
+key = {widgetsall}
+}
