performance-test, etag_lm-test

--- a/urls.bib
+++ b/urls.bib
@@ -179,3 +179,13 @@ note = {Hierarchie von Widgets in GTK+. [Stand: 30.05.2015]},
 howpublished = "\url{https://developer.gnome.org/gtk3/stable/ch02.html}",
 key = {widgetsall}
 }
+
+@Misc{feedshare,
+note = {Anbieter von Feedlisten. [Stand: 14.06.2015]},
+howpublished = "\url{http://feedshare.net/}",
+key = {feedshare}
+}
+
+
+key = {widgetsall}
+}
