etag, lm, chapter iv and v

--- a/urls.bib
+++ b/urls.bib
@@ -186,6 +186,9 @@ howpublished = "\url{http://feedshare.net/}",
 key = {feedshare}
 }
 
-
-key = {widgetsall}
+@Misc{httpbin,
+note = {HTTP Request&Response-Service. [Stand: 16.06.2015]},
+howpublished = "\url{http://httpbin.org/}",
+key = {httpbin}
 }
+
