chapter V, bibs, plots

--- a/refs.bib
+++ b/refs.bib
@@ -32,6 +32,12 @@
   publisher={O'Reilly Media, Inc.}
 }
 
-
+@book{kiessling,
+  title={Entwicklung und Implementierung eines Feedreaders},
+  author={Kießling, Susanne},
+  year={2015},
+  pages = {},
+  publisher={Hochschule Hof}
+}
 
 
