--- a/urls.bib
+++ b/urls.bib
@@ -192,3 +192,11 @@ howpublished = "\url{http://httpbin.org/}",
 key = {httpbin}
 }
 
+
+
+@Misc{rssrequests,
+note = {Spezifikation RSS 2.0, Auflistung der Elemente. [Stand: 05.07.2015]},
+howpublished = "\url{http://cyber.law.harvard.edu/rss/rss.html#requiredChannelElements}",
+key = {rssrequests}
+}
+
