--- a/urls.bib
+++ b/urls.bib
@@ -200,3 +200,11 @@ howpublished = "\url{http://cyber.law.harvard.edu/rss/rss.html#requiredChannelEl
 key = {rssrequests}
 }
 
+https://docs.python.org/3/library/pickle.html
+
+@Misc{pickle,
+note = {Dokumentation des Python-Moduls, pickle. [Stand: 13.07.2015]},
+howpublished = "\url{https://docs.python.org/3/library/pickle.html}",
+key = {pickle}
+}
+
