chapter VII, Suche

--- a/urls.bib
+++ b/urls.bib
@@ -200,7 +200,6 @@ howpublished = "\url{http://cyber.law.harvard.edu/rss/rss.html#requiredChannelEl
 key = {rssrequests}
 }
 
-https://docs.python.org/3/library/pickle.html
 
 @Misc{pickle,
 note = {Dokumentation des Python-Moduls, pickle. [Stand: 13.07.2015]},
@@ -208,3 +207,8 @@ howpublished = "\url{https://docs.python.org/3/library/pickle.html}",
 key = {pickle}
 }
 
+@Misc{difflib,
+note = {Dokumentation des Python-Moduls, difflib. [Stand: 16.07.2015]},
+howpublished = "\url{https://docs.python.org/3.3/library/difflib.html#module-difflib}",
+key = {difflib}
+}
