--- a/refs.bib
+++ b/refs.bib
@@ -40,4 +40,12 @@
   publisher={Hochschule Hof}
 }
 
+@book{ratcliff,
+  title={Pattern Matching: The Gestalt Approach},
+  author={Ratcliff, John W. und Metzener, D. E.},
+  year={1988},
+  publisher={Dr. Dobb's Journal},
+  url={http://www.drdobbs.com/database/pattern-matching-the-gestalt-approach/184407970?pgno=5}
+}
+
 
