--- a/refs.bib
+++ b/refs.bib
@@ -49,3 +49,20 @@
 }
 
 
+@inproceedings{bard2007spelling,
+  title={Spelling-error tolerant, order-independent pass-phrases via the Damerau-Levenshtein string-edit distance metric},
+  author={Bard, Gregory V},
+  booktitle={Proceedings of the fifth Australasian symposium on ACSW frontiers-Volume 68},
+  pages={117--124},
+  year={2007},
+  organization={Australian Computer Society, Inc.}
+}
+
+@book{runkler2010data,
+  title={Data Mining: Methoden und Algorithmen intelligenter Datenanalyse},
+  author={Runkler, Thomas A},
+  year={2010},
+  publisher={Springer-Verlag}
+}
+
+
