--- a/urls.bib
+++ b/urls.bib
@@ -212,3 +212,9 @@ note = {Dokumentation des Python-Moduls, difflib. [Stand: 16.07.2015]},
 howpublished = "\url{https://docs.python.org/3.3/library/difflib.html#module-difflib}",
 key = {difflib}
 }
+
+@Misc{blob,
+note = {Referenz des Python-Moduls TextBlob. [Stand: 17.07.2015]},
+howpublished = "\url{http://stevenloria.com/how-to-build-a-text-classification-system-with-python-and-textblob/}",
+key = {blob}
+}
