chapter VII, Einleitung

--- a/refs.bib
+++ b/refs.bib
@@ -65,4 +65,13 @@
   publisher={Springer-Verlag}
 }
 
+@inproceedings{dumais,
+  title={Inductive learning algorithms and representations for text categorization},
+  author={Dumais, Susan and Platt, John and Heckerman, David and Sahami, Mehran},
+  booktitle={Proceedings of the seventh international conference on Information and knowledge management},
+  pages={148--155},
+  year={1998},
+  organization={ACM}
+}
+
 
