all chapter review

--- a/urls.bib
+++ b/urls.bib
@@ -218,3 +218,16 @@ note = {Referenz des Python-Moduls TextBlob. [Stand: 17.07.2015]},
 howpublished = "\url{http://stevenloria.com/how-to-build-a-text-classification-system-with-python-and-textblob/}",
 key = {blob}
 }
+
+@Misc{pypi,
+note = {Plattform für Python-Pakete, PyPI [Stand: 19.07.2015]},
+howpublished = "\url{https://pypi.python.org/pypi}",
+key = {pypi}
+}
+
+
+@Misc{mckee,
+note = {Github-Repository von K. McKee, Entwickler des Universal Feedparsers [Stand: 19.07.2015]},
+howpublished = "\url{https://github.com/kurtmckee/feedparser}",
+key = {mckee}
+}
