--- a/refs.bib
+++ b/refs.bib
@@ -78,7 +78,19 @@
   title={HTTP: the definitive guide},
   author={Gourley, David and Totty, Brian},
   year={2002},
-  publisher={" O'Reilly Media, Inc."}
+  publisher={O'Reilly Media, Inc.}
 }
 
+@book{pilgrim,
+  title={Python 3-Intensivkurs: Projekte erfolgreich realisieren},
+  author={Pilgrim, Mark},
+  year={2010},
+  publisher={Springer-Verlag}
+}
 
+@book{hybrid,
+  title={A hybrid user model for news story classification},
+  author={Billsus, Daniel and Pazzani, Michael J},
+  year={1999},
+  publisher={Springer}
+}
