--- a/refs.bib
+++ b/refs.bib
@@ -42,10 +42,10 @@
 
 @book{ratcliff,
   title={Pattern Matching: The Gestalt Approach},
-  author={Ratcliff, John W. und Metzener, D. E.},
+  author={Ratcliff, John W. and Metzener, D. E.},
   year={1988},
   publisher={Dr. Dobb's Journal},
-  url={http://www.drdobbs.com/database/pattern-matching-the-gestalt-approach/184407970?pgno=5}
+  url={http://www.drdobbs.com/database/pattern-matching-the-gestalt-approach/184407970?pgno=5 [Stand: 22.07.2015]}
 }
 
 
@@ -60,7 +60,7 @@
 
 @book{runkler2010data,
   title={Data Mining: Methoden und Algorithmen intelligenter Datenanalyse},
-  author={Runkler, Thomas A},
+  author={Runkler, Thomas A.},
   year={2010},
   publisher={Springer-Verlag}
 }
