--- a/urls.bib
+++ b/urls.bib
@@ -89,7 +89,7 @@
 }
 
 @misc{FPD,
-    note = {Dokumentation Universal Feedparser. [Stand: 10.04.2015]},
+    note = {Dokumentation Universal Feedparser. [Stand: 22.07.2015]},
     howpublished = "\url{https://pythonhosted.org/feedparser/}",
     key = {FPD}
 }
@@ -121,7 +121,7 @@
 
 
 @Misc{libsoup,
-    note = {Projektseite von libsoup. [Stand: 17.04.2015]},
+    note = {Projektseite von libsoup. [Stand: 20.05.2015]},
     howpublished = "\url{https://wiki.gnome.org/action/show/Projects/libsoup?action=show&redirect=LibSoup}",
     key = {libsoup}
 }
@@ -154,7 +154,7 @@ key = {gimp}
 }
 
 @Misc{lgpl,
-note = {Referenz zu LGBL. [Stand: 28.05.2015]},
+note = {Referenz zu LGPL. [Stand: 28.05.2015]},
 howpublished = "\url{http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html}",
 key = {lgpl}
 }
@@ -214,8 +214,8 @@ key = {difflib}
 }
 
 @Misc{blob,
-note = {Referenz des Python-Moduls TextBlob. [Stand: 17.07.2015]},
-howpublished = "\url{http://stevenloria.com/how-to-build-a-text-classification-system-with-python-and-textblob/}",
+note = {Dokumentation des Python-Moduls TextBlob. [Stand: 17.07.2015]},
+howpublished = "\url{https://textblob.readthedocs.org/en/latest/}",
 key = {blob}
 }
 
